--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
+    <title id="title"></title>
     <meta charset="utf-8">
-    <title>frontend</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <meta name="author" content="Christophe Ploujoux">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/style/font-awesome.min.css" rel="stylesheet">
     <link href="/static/style/font-material.css" rel="stylesheet">
     <link href="/static/style/materialize.css" rel="stylesheet">
   </head>
