Changement avec coffeescript + webpack + rajout template routes/page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="Christophe Ploujoux">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/static/style/font-awesome.min.css" rel="stylesheet">
-    <link href="/static/style/font-material.css" rel="stylesheet">
-    <link href="/static/style/materialize.css" rel="stylesheet">
+    <link id="favicon32" rel="icon"/>
+    <link id="favicon192" rel="icon"/>
+    <link id="favicon180" rel="apple-touch-icon-precomposed"/>
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/css/font-material.css" rel="stylesheet">
+    <link href="/static/css/materialize.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
